dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(vifm, 0.6)
AM_CONFIG_HEADER(config.h)


AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AM_PROG_LIBTOOL
AC_CONFIG_MACRO_DIR([m4])
AC_CHECK_HEADERS(limits.h sys/time.h unistd.h wchar.h)
AC_CHECK_FUNCS(getcwd mkdir regcomp strdup strstr)
AC_SYS_LARGEFILE
AC_FUNC_FSEEKO
AC_TYPE_OFF_T


dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${datadir}" = 'x${prefix}/share'; then
  if test "x${prefix}" = "xNONE"; then
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${ac_default_prefix}/share/${PACKAGE}")
  else
    AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${prefix}/share/${PACKAGE}")
  fi
else
  AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${datadir}/${PACKAGE}")
fi

dnl Set PACKAGE_SOURCE_DIR in config.h.
packagesrcdir=`cd $srcdir && pwd`
AC_DEFINE_UNQUOTED(PACKAGE_SOURCE_DIR, "${packagesrcdir}")

dnl Use -Wall if we have gcc.
changequote(,)dnl
if test "x$GCC" = "xyes"; then
  case " $CFLAGS " in
  *[\ \	]-Wall[\ \	]*) ;;
  *) CFLAGS="$CFLAGS -Wall" ;;
  esac
fi
changequote([,])dnl

dnl AC_CHECK_LIB(XCurses, initscr)
vifm_cv_curses=/usr
AC_ARG_WITH(curses, [  --with-curses=DIR       where ncurses is installed ],
	[if test $withval != yes; then
		vifm_cv_curses=$withval
	fi
	if test x$vifm_cv_curses != x/usr; then
		LDFLAGS="-L${abook_cv_curses}/lib $LDFLAGS"
		CPPFLAGS="$CPPFLAGS -I${vifm_cv_curses}/include"
	fi])

AC_CHECK_LIB(ncursesw, initscr,
	[LIBS="$LIBS -lncursesw"
	if test x$vifm_cv_curses = x/usr -a -d /usr/include/ncursesw; then
		CPPFLAGS="$CPPFLAGS -I/usr/include/ncursesw"
	fi
	AC_CHECK_HEADERS(ncurses.h)],[
	ac_widec_possible=no
	AC_CHECK_LIB(ncurses, initscr,
		[LIBS="$LIBS -lncurses"
		if test x$vifm_cv_curses = x/usr -a -d /usr/include/ncurses; then
			CPPFLAGS="$CPPFLAGS -I/usr/include/ncurses"
		fi
		AC_CHECK_HEADERS(ncurses.h)],
		[CF_CURSES_LIBS])
	])
LIBS=$LIBS $GUI_LINK_OPTS_TERM

dnl checks for mime type detection

if pkg-config --exists glib-2.0 gtk+-2.0; then
	CFLAGS="$CFLAGS $(pkg-config --cflags glib-2.0 gtk+-2.0)"
	LIBS="$LIBS $(pkg-config --libs glib-2.0 gtk+-2.0)"
	AC_DEFINE([HAVE_LIBGTK], [1], [use gtk to determine mime type])
fi

AC_CHECK_LIB(magic, magic_open)

dnl handle options

AC_ARG_ENABLE(extended_keys,
	AS_HELP_STRING(
		[--enable-extended-keys],
		[enable extended keys (like arrows, home etc.). Without it will be no
		 delay after pressing escape @<:@default=yes@:>@     ]),
	[extended_keys=$enableval],
	[extended_keys=yes])

AC_ARG_ENABLE(compatibility_mode,
	AS_HELP_STRING(
		[--enable-compatibility-mode],
		[enable compatibility with previous versions of vifm (behaviour of dd
		 and <tab>) @<:@default=yes@:>@     ]),
	[compatibility_mode=$enableval],
	[compatibility_mode=yes])

if test "$extended_keys" = "yes"; then
	AC_DEFINE([ENABLE_EXTENDED_KEYS], [1], [enables extended keys (arrows etc.)])
fi

if test "$compatibility_mode" = "yes"; then
	AC_DEFINE([ENABLE_COMPATIBILITY_MODE], [1], [old behaviour of dd and <tab>])
fi

AC_OUTPUT([
Makefile
src/Makefile
])

